Bug 153981 - dolphin navigates inside opendocument files instead of opening them
Summary: dolphin navigates inside opendocument files instead of opening them
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-12-13 18:19 UTC by Ivo Anjo
Modified: 2007-12-14 12:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ivo Anjo 2007-12-13 18:19:06 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
OS:                Linux

Opendocument files (odt, ods, odp, etc) are really zip files, but dolphin shouldn't try to navigate them with the zip kioslave because that's obviously not expected by most users (they shouldn't have to know or care that the format is a zip file), the default app (kword/openoffice/etc) should be opened instead.
Comment 1 Peter Penz 2007-12-13 18:22:20 UTC
Ah, thanks for this report, I was not aware about this. I'll try to fix this until KDE 4.0...
Comment 2 Peter Penz 2007-12-14 12:45:34 UTC
SVN commit 748399 by ppenz:

Fixed issue that when clicking on Open Office files that Dolphin handles the files as zip-folder. I'm not sure whether there might be a nicer way doing this, but at least for KDE 4.0 this should be sufficient.

BUG: 153981

 M  +2 -1      dolphinviewcontainer.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=748399