Fixed issue that when clicking on Open Office files that Dolphin handles the files as zip-folder. I'm not sure whether there might be a nicer way doing this, but at least for KDE 4.0 this should be sufficient.

BUG: 153981

svn path=/trunk/KDE/kdebase/apps/; revision=748399